--- a/bloc_hydrated/pubspec.yaml
+++ b/bloc_hydrated/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.2
+  hydrated_bloc: ^9.1.0
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
