--- a/todo_cubit/pubspec.yaml
+++ b/todo_cubit/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  uuid: ^3.0.7
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
